<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:id="@+id/createPOITitle"
        android:text="@string/poiTitle"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/nameText"
        android:text="@string/name"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/nameEdit"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/typeText"
        android:text="@string/type"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/typeEdit"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/descText"
        android:text="@string/description"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/descEdit"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/createBtn"
        android:text="@string/createMarker"
        android:layout_height="wrap_content" />
</LinearLayout>
